--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "demo-hitechmart",
+  "name": "client",
   "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "@coreui/icons": "^3.0.1",
     "@coreui/icons-react": "^2.1.0",
@@ -26,7 +27,7 @@
     "chart": "^0.1.2",
     "chart.js": "^4.3.0",
     "datatables.net-dt": "^1.13.6",
-    "firebase": "^9.22.1",
+    "firebase": "^8.6.8",
     "fontawesome": "^5.6.3",
     "formik": "^2.2.9",
     "mdb-react-ui-kit": "^6.0.0",
@@ -43,7 +44,7 @@
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
@@ -53,7 +54,7 @@
     "redux-devtools-extension": "^2.13.9",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
-    "sweetalert2": "^11.7.12",
+    "sweetalert2": "^11.6.13",
     "validator": "^13.9.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
@@ -83,6 +84,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.3.2"
   }
 }
