--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.9",
     "recharts": "^2.6.2",
     "redux": "^4.2.1",
