--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apexcharts": "^3.40.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "bs-stepper": "^1.7.0",
     "chart": "^0.1.2",
     "chart.js": "^4.3.0",
