--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-images-uploading": "^3.1.7",
     "react-modal": "^3.16.1",
