--- a/package.json
+++ b/package.json
@@ -52,9 +52,10 @@
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "reactstrap": "^9.1.9",
-    "recharts": "^2.6.2",
+    "recharts": "^2.7.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "sass": "^1.66.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.11",
     "sweetalert2": "^11.6.13",
