--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "apexcharts": "^3.40.0",
+    "apexcharts": "^3.42.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
@@ -32,9 +32,11 @@
     "firebase": "^8.6.8",
     "fontawesome": "^5.6.3",
     "formik": "^2.2.9",
+    "leaflet": "^1.9.4",
     "mdb-react-ui-kit": "^6.0.0",
     "nodemailer": "^6.9.3",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.3",
@@ -42,6 +44,7 @@
     "react-fetch-hook": "^1.9.5",
     "react-icons": "^4.8.0",
     "react-images-uploading": "^3.1.7",
+    "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.7",
