--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^8.6.8",
     "fontawesome": "^5.6.3",
     "formik": "^2.2.9",
+    "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "mdb-react-ui-kit": "^6.0.0",
     "nodemailer": "^6.9.3",
