--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,26 @@
+
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "HitecMart",
+  "name": "HitecMart Application",
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "icons": [
+    {
+      "src": "images/logo.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "images/logo.png",
+      "type": "image/png",
+      "sizes": "512x512"
+    } ,{
+      "src": "images/logo.png",
+      "type": "image/x-icon",
+      "sizes": "64x64 32x32 24x24 16x16"
+    }
+  ]
+  
 }
