--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.7",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-service-worker": "^0.1.1",
