--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "leaflet": "^1.9.4",
     "mdb-react-ui-kit": "^6.0.0",
     "nodemailer": "^6.9.3",
+    "payu-websdk": "^1.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.7.4",
