--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "browser-image-compression": "^2.0.2",
     "bs-stepper": "^1.7.0",
     "chart": "^0.1.2",
     "chart.js": "^4.3.0",
@@ -60,6 +61,7 @@
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
+    "react-type-animation": "^3.2.0",
     "reactstrap": "^9.1.9",
     "recharts": "^2.7.3",
     "redux": "^4.2.1",
