--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.42.0",
+    "array-move": "^4.0.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
@@ -53,12 +54,14 @@
     "react-loader-spinner": "^5.4.5",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "^8.0.7",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^5.0.1",
     "react-service-worker": "^0.1.1",
     "react-slick": "^0.29.0",
+    "react-sortable-hoc": "^2.0.0",
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
