--- a/package.json
+++ b/package.json
@@ -86,8 +86,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "prod": "node --max-old-space-size=8192 index.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
