--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
@@ -21,6 +23,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-grid-community": "^31.0.1",
+    "ag-grid-react": "^31.0.1",
     "apexcharts": "^3.42.0",
     "array-move": "^4.0.0",
     "axios": "^1.3.5",
@@ -45,7 +49,7 @@
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
-    "react-data-table-component": "^7.5.3",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-fetch-hook": "^1.9.5",
     "react-geolocated": "^4.1.2",
